Update env.example with OpenAI API key placeholder

--- a/.env.example
+++ b/.env.example
@@ -22,5 +22,8 @@ EMAIL_PASS=your-app-password
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 
+# OpenAI API (required for lyrics transcription)
+OPENAI_API_KEY=sk-...
+
 # Debug mode
 DEBUG=true
