--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,12 @@ yarn-error.log*
 .env.*.local
 
 # Database files (keep structure, ignore data)
-database/*.db
+# IMPORTANT: Main database is tracked for Render deployment
+database/sessions.db
 database/*.db-journal
 database/*.db-shm
 database/*.db-wal
+!database/el_inmortal_2.db
 !database/.gitkeep
 
 # Logs
