Add Dropbox API integration for automatic audio file download during transcription

--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,8 @@ SPOTIFY_CLIENT_SECRET=
 # OpenAI API (required for lyrics transcription)
 OPENAI_API_KEY=sk-...
 
+# Dropbox API (required for downloading audio files from Dropbox)
+DROPBOX_ACCESS_TOKEN=your-dropbox-access-token-here
+
 # Debug mode
 DEBUG=true
