--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-sqlite3": "^0.9.13",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "dropbox": "^10.34.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
