--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.17.1",
     "node-cron": "^3.0.3",
     "openai": "^6.22.0",
     "sqlite3": "^5.1.6",
