--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.17.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^8.0.1",
     "openai": "^6.22.0",
     "sqlite3": "^5.1.6",
     "winston": "^3.11.0"
