Add API v1 with API-key auth and MCP-ready documentation

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,7 @@ PORT=3000
 
 # Node environment
 NODE_ENV=production
+
+# Master API key for /api/v1 (machine-to-machine)
+# Example: openssl rand -hex 32
+MCP_MASTER_API_KEY=replace-with-strong-random-key
