--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,28 @@
 # Database Configuration (MySQL)
-DB_HOST=db.artistaviral.com
-DB_USER=ailex
-DB_PASSWORD=soyesmalandro.2
-DB_NAME=artistaviral
+DB_HOST=your-db-host
+DB_PORT=3306
+DB_USER=your-db-user
+DB_PASSWORD=your-db-password
+DB_NAME=your-db-name
+DB_SSL=true
+DB_SSL_REJECT_UNAUTHORIZED=false
+
+# YouTube Channel Audit Tool (required for /tools/youtube-metadata-audit)
+YT_CLIENT_SECRETS_PATH=C:/path/to/client_secret.json
+YT_TOKEN_FILE_PATH=C:/path/to/youtube_token.json
+
+# SEO optimization (Perplexity + top-traffic metadata targets)
+PPLX_API_KEY=pplx-your-perplexity-key
+PPLX_MODEL=sonar-pro
+SEO_PROMPT_TEMPLATE_PATH=C:/path/to/Generate SEO-optimized metadata.md
+YT_SEO_TOP_TRAFFIC_LIMIT=50
+YT_DAILY_REPORT_TO=team@galanteelemperador.com
+YT_REPORT_EMAIL_FROM="El Inmortal 2 Dashboard" <no-reply@galanteelemperador.com>
+YT_REPORT_EMAIL_TRANSPORT=smtp
+MS_GRAPH_TENANT_ID=your-tenant-id
+MS_GRAPH_CLIENT_ID=your-app-client-id
+MS_GRAPH_CLIENT_SECRET=your-app-client-secret
+MS_GRAPH_SENDER_USER=info@galantealx.com
 
 # OpenAI API (for lyrics transcription)
 # Get from: https://platform.openai.com/api-keys
