Keep users logged in and fix login branding

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,12 @@ GOOGLE_SERVICE_ACCOUNT_KEY={"type":"service_account","project_id":"your-project"
 
 # Session Secret (change this to something random and secure)
 SESSION_SECRET=change-this-to-a-random-secret-key
+SESSION_COOKIE_NAME=el2.sid
+SESSION_MAX_AGE_DAYS=365
+SESSION_ROLLING=true
+SESSION_COOKIE_SECURE=true
+SESSION_COOKIE_SAMESITE=lax
+SESSION_CLEANUP_INTERVAL_MS=900000
 
 # Admin credentials (for simple auth)
 ADMIN_USERNAME=admin
