--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dropbox": "^10.34.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-mysql-session": "^3.0.3",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "googleapis": "^171.4.0",
