Automate hourly database backups and rights schema setup

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ DB_PASSWORD=your-db-password
 DB_NAME=your-db-name
 DB_SSL=true
 DB_SSL_REJECT_UNAUTHORIZED=false
+DB_BACKUP_DIR=C:/path/to/backups/db_artistaviral
+DB_BACKUP_RETENTION_DAYS=14
+DB_BACKUP_REQUESTED_BY=scheduler
+MYSQLDUMP_PATH=C:/Program Files/MySQL/MySQL Workbench 8.0 CE/mysqldump.exe
 
 # YouTube Channel Audit Tool (required for /tools/youtube-metadata-audit)
 YT_CLIENT_SECRETS_PATH=C:/path/to/client_secret.json
