Add Intel Agent system: ASCAP, Social, Platform scanning + Landing page
- Intel scripts: ASCAP scan/batch/download/import/analyze
- Social scan and platform footprint tools
- Intel agent runtime, credentials, missions, skills
- New routes: bulk-upload, landing, settings
- New views: albums CRUD, auth register, landing, settings
- New DB tables: intel_agent_*, rights_catalog_works, platform_artist_presence
- Landing page builder (Tailwind + React)
- Exports management, image proxy endpoints

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ DB_BACKUP_DIR=C:/path/to/backups/db_artistaviral
 DB_BACKUP_RETENTION_DAYS=14
 DB_BACKUP_REQUESTED_BY=scheduler
 MYSQLDUMP_PATH=C:/Program Files/MySQL/MySQL Workbench 8.0 CE/mysqldump.exe
+INTEL_CRED_ENC_KEY=replace-with-strong-random-secret
+INTEL_ARTIST_NAME=Galante el Emperador
+ASCAP_DEFAULT_WRITER=ALEX ALBERTO SERRANO OLIVENCIA
 
 # YouTube Channel Audit Tool (required for /tools/youtube-metadata-audit)
 YT_CLIENT_SECRETS_PATH=C:/path/to/client_secret.json
@@ -27,6 +30,12 @@ MS_GRAPH_TENANT_ID=your-tenant-id
 MS_GRAPH_CLIENT_ID=your-app-client-id
 MS_GRAPH_CLIENT_SECRET=your-app-client-secret
 MS_GRAPH_SENDER_USER=info@galantealx.com
+
+# Landing page streaming links
+LANDING_SPOTIFY_URL=https://open.spotify.com
+LANDING_APPLE_MUSIC_URL=https://music.apple.com
+LANDING_YOUTUBE_MUSIC_URL=https://music.youtube.com
+LANDING_DEEZER_URL=https://www.deezer.com
 
 # OpenAI API (for lyrics transcription)
 # Get from: https://platform.openai.com/api-keys
